testsuite/tests/properties/invalid_lazy_field/common.lkt
from lexer_example import foo_lexer
from test import FooNode, Example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(Example("example") | Number(@Number))
}

@metadata struct Metadata {
    @used_in_equality flag: Bool
}

class Number: FooNode {
}
